# waste-sorting-robot-project

src/scripts/: move_robot.py
src/waste_robot_moveit_config/: CMakeLists.txt  package.xml
src/waste_robot_moveit_config/config/: gazebo_pids.yaml  ros_controllers.yaml
src/waste_sorting_control/scripts/: world_setup.py
src/waste_sorting_description/urdf/: waste_arm.urdf  waste_robot.urdf
src/waste_sorting_gazebo/launch/: sim.launch
src/waste_sorting_gazebo/models/trash_bin_red/: model.config  model.sdf
src/waste_sorting_gazebo/worlds/: waste_sorting.world
