<?xml version="1.0"?>
<package format="2">
  <name>waste_robot_moveit_config</name>
  <version>0.0.1</version>
  <description>MoveIt config package</description>

  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>

</package>
